--- a/catNodeEdit.htm
+++ b/catNodeEdit.htm
@@ -40,7 +40,11 @@
                 <div class="container">
                     <div class="title">
                         <h2>架構管理</h2>
-                        <button class="btn" onclick="window.location.href='data_list_noTree.htm';">放棄</button>
+                        <div class="function">
+                            <ul>
+                                <li class="icon_back"><a href="catTreeList.htm">回目錄樹條列</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- flex-12 -->
                     <div class="flex-3-9">
@@ -51,22 +55,28 @@
                                     <h3>全球資訊入口網(目錄樹名稱)</h3>
                                 </div>
                                 <div class="_content">
+                                    <div id="node_0">
+	                                    <span class="btn" style="background-color:#E0E0E0;width:100%;">
+	                                    	根目錄&nbsp;&nbsp;
+	                                    	<a href="#"><i class="i_add"></i>新增</a>
+	                                    </span>
+	                                </div>
                                     <div class="sortable_list">
                                         <div class="sortable">
                                             <div>
-                                                <span>選單節點名稱 1 <div class="dropdown">
+                                                <span>↳ 選單節點名稱 1 <div class="dropdown">
                                                         <a href="#" class="btn-dropdown">
                                                             <i class="i_edit"></i>
                                                         </a>
                                                         <div class="dropdown-content">
                                                             <ul>
                                                                 <li>
-                                                                    <button class="btn">
+                                                                    <button class="btn" onclick="window.location.href='catNodeEdit.htm';">
                                                                         <i class="i_edit"></i>編輯</button>
                                                                 </li>
                                                                 <li>
                                                                     <!--增加下層節點-->
-                                                                    <button class="btn">
+                                                                    <button class="btn" onclick="window.location.href='catNodeAdd.htm';">
                                                                         <i class="i_add"></i>新增</button>
                                                                 </li>
                                                                 <li>
@@ -103,7 +113,7 @@
                                                         </span>
                                                     </div>
                                                     <div>
-                                                        <span>選單 1-2 <div class="dropdown">
+                                                        <span>↳ 選單 1-2 <div class="dropdown">
                                                                 <a href="#" class="btn-dropdown">
                                                                     <i class="i_edit"></i>
                                                                 </a>
@@ -323,7 +333,7 @@
                                                 </span>
                                             </div>
                                             <div>
-                                                <span>選單 4 <div class="dropdown">
+                                                <span>↳ 選單 4 <div class="dropdown">
                                                         <a href="#" class="btn-dropdown">
                                                             <i class="i_edit"></i>
                                                         </a>
@@ -548,6 +558,7 @@
                                         <div class="form_grp">
                                             <div class="quick_btn">
                                                 <input name="ctUnitId" id="ctUnitId" type="hidden" value="">
+                                                <div id="CtUnitName">市政會議直播</div>
                                                 <button class="btn" data-fancybox data-type="iframe" data-src="fancybox_ctUnitList.htm" href="javascript:;" style="width:120px">選擇既有單元</button>
                                                 　　(不選擇會自動建立)
                                             </div>
