--- a/catTreeAdd.htm
+++ b/catTreeAdd.htm
@@ -39,6 +39,11 @@
                 <div class="container">
                     <div class="title">
                         <h2>架構管理</h2>
+                        <div class="function">
+                            <ul>
+                                <li class="icon_back"><a href="javascript: history.back();">回上一頁</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- flex-12 -->
                     <div class="flex-12">
