--- a/index_list.html
+++ b/index_list.html
@@ -152,6 +152,19 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>網站管理：目錄樹管理</td>
+                        <td>
+                            <ul>
+                                <li>目錄樹清單 <a href="catTreeList.htm" target="_blank"></a></li>
+                                <li>新增目錄樹 <a href="catTreeAdd.htm" target="_blank"></a></li>
+                                <li>編輯目錄樹 <a href="catTreeEdit.htm" target="_blank"></a></li>
+                                <li>編輯目錄樹架構 <a href="catNodeEdit.htm" target="_blank"></a></li>
+                                <li>新增目錄樹節點 <a href="catNodeAdd.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>Chris版備份</td>
                         <td><a href="Chris/index.htm" target="_blank"></a></td>
                     </tr>
