--- a/data_list.htm
+++ b/data_list.htm
@@ -122,7 +122,7 @@
                                     <h3>網站單元</h3>
                                 </div>
                                 <div class="widget">
-                                    <div class="treeview_block">
+                                    <div class="treeview_block" style="display:none;">
                                         <ul id="myUL" class="treeview">
                                             <li><span class="caret">目錄樹一</span>
                                               <ul class="nested">
@@ -195,7 +195,7 @@
                                         
                                         .caret-down::before {
                                           -ms-transform: rotate(90deg); /* IE 9 */
-                                          -webkit-transform: rotate(90deg); /* Safari */'
+                                          -webkit-transform: rotate(90deg); /* Safari */
                                           transform: rotate(90deg);  
                                         }
                                         
@@ -344,7 +344,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='data_new_update.htm';"><i class="i_add"></i>新增</button>
                                     </div>
                                 </div>
                                 <div class="_content">
