--- a/index_list.html
+++ b/index_list.html
@@ -165,6 +165,18 @@
                     </tr>
                     <tr>
                         <td></td>
+                        <td>內容管理：資料上稿</td>
+                        <td>
+                            <ul>
+                                <li>快速上稿 <a href="data_list_noTree.htm" target="_blank"></a></li>
+                                <li>單元上稿 <a href="data_list.htm" target="_blank"></a></li>
+                                <li>新增/編修資料 <a href="data_new_update.htm" target="_blank"></a></li>
+                                <li>新增資料 <a href="data_new2.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
                         <td>Chris版備份</td>
                         <td><a href="Chris/index.htm" target="_blank"></a></td>
                     </tr>
