--- a/aside.htm
+++ b/aside.htm
@@ -102,8 +102,8 @@
                     <li><a href="ugrpList.htm"><span>權限群組</span></a></li>
                     <li><a href="userList.htm"><span>使用者管理</span></a></li>
                     <li><a href="deptEdit.htm"><span>組織架構</span></a></li>
-                    <li><a href="#"><span>登入紀錄查詢</span></a></li>
-                    <li><a href="#"><span>個人資料檢視</span></a></li>
+                    <li><a href="userLogList.htm"><span>登入紀錄查詢</span></a></li>
+                    <li><a href="userUpdate.htm"><span>個人資料檢視</span></a></li>
                 </ul>
             </li>
             <li><a href="#">
@@ -124,8 +124,8 @@
                 <ul>
                     <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
                     <li><a href="data_list.htm"><span>單元上稿</span></a></li>
-                    <li><a href="media_photo.htm"><span>MMO資源庫</span></a></li>
                     <li><a href="data_list.htm"><span>資料審稿</span></a></li>
+                    <li><a href="media_photo.htm"><span>多媒體資源庫</span></a></li>
                 </ul>
             </li>
             <!--li>
