--- a/data_list_noTree.htm
+++ b/data_list_noTree.htm
@@ -250,7 +250,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='data_new_update.htm';"><i class="i_add"></i>快速新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='data_new2.htm';"><i class="i_add"></i>快速新增</button>
                                         <button class="btn" onclick="window.location.href='data_list.htm';">單元上稿</button>
                                     </div>
                                 </div>
