--- a/data_list.htm
+++ b/data_list.htm
@@ -345,6 +345,7 @@
                                     </div>
                                     <div class="quick_btn">
                                         <button class="btn btn-orange" onclick="window.location.href='data_new_update.htm';"><i class="i_add"></i>新增</button>
+                                        <button class="btn" onclick="window.location.href='data_list_noTree.htm';">單元上稿</button>
                                     </div>
                                 </div>
                                 <div class="_content">
