--- a/data_list_noTree.htm
+++ b/data_list_noTree.htm
@@ -250,7 +250,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='data_new2.htm';"><i class="i_add"></i>快速新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='data_new_update.htm';"><i class="i_add"></i>快速新增</button>
                                         <button class="btn" onclick="window.location.href='data_list.htm';">單元上稿</button>
                                     </div>
                                 </div>
@@ -288,7 +288,7 @@
                                                     <td>全球資訊入口網 / 消息公告 / 最新消息</td>
                                                     <td><div class="pic"><img src="images/demo/01.jpg" alt=""></div></td>
                                                     <td class="main_data">
-                                                        <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
+                                                        <a href="data_new2.htm">大更沒於正時節直只們來壓算有先，求化化看雨的 </a>
                                                     </td>
                                                     <td><time>2019/10/16</time></td>
                                                     <td><time>2019/12/16</time></td>
@@ -310,7 +310,7 @@
                                                                     </li>
                                                                     <li>
                                                                         <button class="btn">
-                                                                            <i class="i_edit"></i>編輯 </button></li>
+                                                                            <i class="i_edit" onclick="window.location.href='data_new_update.htm';"></i>編輯 </button></li>
                                                                     <li>
                                                                         <button class="btn btn-red">
                                                                             <i class="i_trash"></i>刪除 </button>
